# static-file-serve

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
src/: handlers.rs  main.rs
